--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cfg_mcal"]
 	path = cfg_mcal
 	url = git@github.com:jbvalle/cfg_mcal.git
+[submodule "cfg_systick"]
+	path = cfg_systick
+	url = git@github.com:jbvalle/cfg_systick.git
